# gifsicle-wasm

./: .gitignore  CMakeLists.txt  em-configure.sh  em-make.sh  gifsicle.html  gifsicle.wasm  pre.js
gifsicle-react/: .eslintrc  .gitignore  config-overrides.js  package.json  tsconfig.json
gifsicle-react/src/: App.css  App.js  App.tsx  ErrorMessages.tsx  example-base64.js  gifsicle.js  gifsicle.wasm  test.js
gifsicle-react/src/lib/: command-text.tsx  gifsicle-wrapper.ts  images.tsx  input-image.tsx  output-image.tsx  text-output.tsx  things.ts
src/: gifsicle.c
